z-index corrections

--- a/css/master.css
+++ b/css/master.css
@@ -21,6 +21,7 @@ header {
   width: 100%;
   height: 80px;
   position: absolute;
+  z-index: 1;
 }
 
 .logo {
@@ -140,6 +141,7 @@ aside {
   background: rgb(176, 32, 0);
   left: -50px;
   transition: all 1s;
+
 }
 
 .aside-button {
@@ -150,6 +152,10 @@ aside {
   position: absolute;
   left: 25px;
   bottom: 50px;
+}
+
+.sidebar {
+  padding: 100px 0 0 0;
 }
 
 .sidebar ul li {
@@ -263,7 +269,7 @@ aside {
   height: 60%;
   background-position: center;
   background-size: contain;
-  z-index: 1;
+  z-index: 2;
   animation: winner 0.5s steps(2) 3 paused;
   display: none;
   animation-timing-function: ease-in-out;
